projects/vb6parse/snapshots/syntax/statements/string_manipulation/rset/rset_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/statements/string_manipulation/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RSetStatement
      children:
        - kind: RSetKeyword
          text: RSet
        - kind: Whitespace
          text: "   "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: target
            - kind: Whitespace
              text: "   "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: "   "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: source
        - kind: IdentifierExpression
          children:
            - kind: Newline
              text: "\n"
